je pense avoir regle les bugs, ca semble marcher, attention par contre, si on join la room 0 comme je le faisais pour faire un channel par defaut, tous les messages envoyes dans le channel 0 sont visibles sur les autres clients, c'est comme si l'on faisait un broadcast, donc il faut juste changer le nombre du channel general et bloquer la creation d'un channel 0. Bon courage pour les semaines qui arrivent, si vous avez des questions hesitez suuurtout pas a m'envoyer un message, force et honneur, vous etes tous et toutes beaux/belles bizouuu (le message de commit est trop long la, allez j'y vais)

--- a/client/src/Chat/Chat.css
+++ b/client/src/Chat/Chat.css
@@ -1,6 +1,3 @@
-.Chat {
-	/* background-color: #696969; */
-  }
   .Chat-logo {
 	height: 40vmin;
 	pointer-events: none;
@@ -67,9 +64,9 @@
 	text-align: center;
 	margin: 20px auto;
   }
-  .Button {
-	margin-top: 1vh;
-	}
+   .Button {
+	  margin-top: 1vh;
+  }
   
   code {
 	margin: 20px auto;
